--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="https://kit.fontawesome.com/a78869e870.js" crossorigin="anonymous"></script>
 	<title>Docinhos caseiros da Bia</title>
 </head>
-<body>
+<body class="bg">
 	<div id="principal">
 		<div id="cabecalho">
 			<div id="logo">
